<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/grp1"
        android:checkableBehavior="all"
        android:name="Menu" >
        <item
            android:title="@string/bulletin_post"
            android:id="@+id/bulletin_menu"
            android:icon="@drawable/seen" />
        <item
            android:id="@+id/messaging"
            android:icon="@mipmap/ic_chat_black_24dp"
            android:title="@string/chat" />
        <item
            android:id="@+id/suggestions"
            android:title="@string/suggestions"
            android:icon="@drawable/sbox" />
        <item
            android:id="@+id/fines"
            android:title="fines"
            android:icon="@drawable/money" />
        <item
            android:id="@+id/promote"
            android:icon="@android:drawable/btn_star_big_on"
            android:title="promote" />

    </group>

    <group
        android:id="@+id/grp2"
        android:checkableBehavior="all"
        android:name="My Activity">
        <item
            android:id="@+id/acc_profile"
            android:icon="@mipmap/ic_person_black_24dp"
            android:title="@string/my_account" />

    </group>

    <group
        android:id="@+id/grp3"
        android:checkableBehavior="all">
        <item
            android:icon="@drawable/ic_action_name_about"
            android:id="@+id/about"
            android:title="@string/about" />
        <item
            android:id="@+id/action_logout"
            android:title="@string/logout"
            android:icon="@android:drawable/ic_lock_power_off" />
    </group>
</menu>