<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_single_view_post"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.micropulse7.cec_bulletin.SingleViewPost">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="391dp"
            android:layout_height="wrap_content"
            android:inputType="none|textPersonName"
            android:ems="10"
            android:id="@+id/single_postusername"
            android:hint="@string/username_who_post"
            android:padding="10dp"
            android:clickable="false"
            android:layout_below="@+id/single_datetime"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none|textPersonName|datetime"
            android:ems="10"
            android:id="@+id/single_datetime"
            android:hint="@string/time"
            android:padding="10dp"
            android:layout_below="@+id/single_postcontent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:clickable="false" />

        <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/add_btn"
        android:id="@+id/single_postimage"
        android:contentDescription="@string/single_image"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:scaleType="centerCrop"
        android:adjustViewBounds="true"
        android:layout_margin="5dp" />

        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="none"
        android:ems="10"
        android:id="@+id/single_posttitle"
        android:hint="@string/post_title_Single"
        android:padding="10dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:clickable="false" />

        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/single_postcontent"
        android:inputType="none"
        android:hint="@string/post_content_single"
        android:padding="10dp"
        android:layout_below="@+id/single_posttitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:clickable="false" />

        <Button
            android:text="@string/remove_post"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:id="@+id/single_RemoveBtn"
            android:visibility="invisible" />

    </LinearLayout>
    </ScrollView>
