<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profileinfo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.micropulse7.cec_bulletin.ProfileAct">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#dfdbdc"
        android:gravity="center"
        android:orientation="vertical"
        android:weightSum="1">

        <include
            layout="@layout/navigation_action_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/cardview_light_background"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/prof_img"
                    android:layout_width="187dp"
                    android:layout_height="145dp"
                    android:contentDescription="@string/prof_img"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/com_facebook_profile_picture_blank_square" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/prof_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="bottom"
                        android:hint="@string/first_and_last_name_prof"
                        android:textAlignment="gravity"
                        android:textColor="#000"
                        android:textSize="18sp"
                        android:textStyle="normal|bold" />

                    <TextView
                        android:id="@+id/prof_course"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="top"
                        android:hint="@string/course_prof"
                        android:textAlignment="gravity"
                        android:textColor="#000"
                        android:textSize="18sp"
                        android:textStyle="normal|bold" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/prof_idnum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="?attr/actionModeSplitBackground"
                    android:hint="@string/id_number_prof"
                    android:padding="5dp"
                    android:textColor="#000"
                    android:textSize="18sp"
                    android:textStyle="normal|bold" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/prof_update"
                    android:layout_width="167dp"
                    android:layout_height="wrap_content"
                    android:text="@string/update_prof" />

            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/prof_ProfileViewTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="#eeeeee"
            android:drawableLeft="@mipmap/ic_person_black_24dp"
            android:drawablePadding="20dp"
            android:padding="5dp"
            android:text="Personal Information"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:background="#dfdbdc"
            android:orientation="vertical">

            <TextView
                android:id="@+id/prof_yearlevel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#eeeeee"
                android:hint="@string/year_level_prof"
                android:textColor="#000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/prof_dob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#eeeeee"
                android:hint="@string/date_of_birth_prof"
                android:padding="5dp"
                android:textColor="#000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/prof_sex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#eeeeee"
                android:hint="@string/sex_prof"
                android:textColor="#000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/prof_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#eeeeee"
                android:hint="@string/address_prof"
                android:textColor="#000"
                android:textSize="18sp" />

        </LinearLayout>


    </LinearLayout>
    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_about2"
        app:menu="@menu/navigation_menu" />

</android.support.v4.widget.DrawerLayout>
