<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.micropulse7.cec_bulletin.Profile_Navigation2"
    tools:showIn="@layout/app_bar_profile__navigation2">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#dfdbdc"
        android:gravity="center"
        android:orientation="vertical"
        android:weightSum="1">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="145dp"
            android:background="@drawable/dark"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/prof_img"
                    android:layout_width="187dp"
                    android:layout_height="145dp"
                    android:contentDescription="@string/prof_img"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/com_facebook_profile_picture_blank_square" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/prof_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="bottom"
                        android:hint="@string/first_and_last_name_prof"
                        android:textAlignment="gravity"
                        android:textColor="@color/buttonTextColor"
                        android:textSize="18sp"
                        android:textStyle="normal|bold" />

                    <TextView
                        android:id="@+id/prof_course"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="top"
                        android:hint="@string/course_prof"
                        android:textAlignment="gravity"
                        android:textColor="@color/buttonTextColor"
                        android:textSize="18sp"
                        android:textStyle="normal|bold" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/prof_idnum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="?attr/actionModeSplitBackground"
                    android:hint="@string/id_number_prof"
                    android:padding="5dp"
                    android:textColor="#000"
                    android:textSize="18sp"
                    android:textStyle="normal|bold" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/prof_update"
                    android:layout_width="167dp"
                    android:layout_height="wrap_content"
                    android:text="@string/update_prof" />

            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/prof_ProfileViewTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="#eeeeee"
            android:drawableLeft="@mipmap/ic_person_black_24dp"
            android:drawablePadding="20dp"
            android:padding="5dp"
            android:text="Personal Information"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp"
            android:background="#dfdbdc"
            android:orientation="vertical">

            <TextView
                android:id="@+id/fullname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#eeeeee"
                android:hint="@string/year_level_prof"
                android:textColor="#000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/id_number2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#eeeeee"
                android:hint="ID number "
                android:padding="5dp"
                android:textColor="#000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/prof_sex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#eeeeee"
                android:hint="@string/sex_prof"
                android:textColor="#000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/Course"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#eeeeee"
                android:hint="Course"
                android:textColor="#000"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/Gmail"
                android:layout_width="match_parent"
                android:hint="Account type"
                android:background="#eeeeee"
                android:textColor="#000"
                android:textSize="18sp"
                android:layout_height="wrap_content" />



        </LinearLayout>

        <ListView
            android:id="@+id/fines_list2"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
