<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.micropulse7.cec_bulletin.RegisterAct"
    android:background="@drawable/gradient">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >


        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:background="@drawable/upperlogin"
            android:layout_height="200dp">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="match_parent"
                android:layout_height="82dp"
                android:layout_marginTop="55dp"
                app:srcCompat="@drawable/logo2" />

        </LinearLayout>

        <TextView
            android:text="Mobile Bulletin Sign Up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nav_acc_type"
            android:padding="10dp"
            android:fontFamily="sans-serif"
            android:textSize="25sp"
            android:textColor="#f1f0f0"
            android:clickable="false"
            android:textColorHighlight="#f7f7f7"
            tools:ignore="UnknownIdInLayout"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:layout_below="@+id/LogoImage"
            android:layout_centerHorizontal="true"
            android:foregroundGravity="center" />

        <EditText
            android:id="@+id/Register_passwordField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/Register_emailField"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/input_outline"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="15dp" />

        <EditText
            android:id="@+id/Register_emailField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/nav_acc_type"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/input_outline"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:label="@string/sign_up"
            android:padding="15dp" />

        <TextView
            android:layout_width="match_parent"
            android:id="@+id/message"
            android:textAlignment="center"
            android:textColor="#ffffff"
            android:textSize="20sp"
            android:text="123"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/registerBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/Register_passwordField"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/btn_background"
            android:text="@string/register"
            android:textColor="@color/colorPrimary" />

        <!--
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginTop="20dp"
            android:id="@+id/Register_nameField"
            android:hint="@string/name"
            android:background="@drawable/input_background"
            android:padding="15dp"
            android:inputType="textPersonName"
            android:layout_below="@+id/textView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" /> -->

    </LinearLayout>
</ScrollView>
